# seher

./: CMakeLists.txt  README.md  package.xml
config/: only_cameras.rviz  robot_tracking.rviz
devel/: .catkin  .rosinstall
devel/include/ros_openpose/: BodyPart.h  Frame.h  Person.h  Pixel.h
devel/lib/pkgconfig/: ddynamic_reconfigure.pc  realsense2_description.pc  ros_openpose.pc
devel/lib/ros_openpose/: rosOpenposeAsync  rosOpenposeSync  testCameraReader
files/: only_person_realsense.rviz  person_pointcloud_realsense.rviz  setup_only_person_realsense.rviz
launch/: config_openpose.launch  config_realsense.launch  hand2_config.launch  hand2_core.launch  hand2_run.launch  hand2_start.launch  hand_config.launch  hand_core.launch  hand_run.launch  hand_start.launch  home.launch  keyop.launch  manipulation.launch  mod_setup_static_publisher.launch  only_calibrate.launch  only_cam.launch  openpose.launch  run.launch  run_openpose.launch  rviz_config_demo2.rviz  setup_config_realsense.launch  setup_start.launch  setup_static_publisher.launch  start_config_realsense copy.launch  start_run.launch  start_setup.launch  test.launch  test1.launch  test2.launch  test_config.launch  test_core.launch  test_original.launch  test_run.launch  transform.launch
licel_pointcloud/: CMakeLists.txt  package.xml
licel_pointcloud/include/: arena_flex_camera.h
licel_pointcloud/include/arena_flex_api/: ArenaFlexAPI.h
licel_pointcloud/launch/: licel_pointcloud_1500mm_view.launch  licel_pointcloud_6000mm_view.launch  licel_pointcloud_publisher_1500mm.launch  licel_pointcloud_publisher_1500mm_calibration.launch  licel_pointcloud_publisher_6000mm.launch
licel_pointcloud/rviz/: licel_point_cloud_view.rviz
licel_pointcloud/src/: arena_flex_camera.cpp  licel_pointcloud_publisher_1500mm.cpp  licel_pointcloud_publisher_6000mm.cpp
msg/: Keypoint.msg
scripts/: _set_cams_info_file.txt  go_up.py  hand2_pubpositions.py  hand_republisher.py  hand_visualizer.py  left_pixel_hand_republisher.py  point_hand_republisher.py  pub.py  right_pixel_hand_republisher.py  set_cams_transforms.py  sub1.py  sub2.py
src/cob_people_perception/cob_leg_detection/: CMakeLists.txt
src/demo/: CMakeLists.txt  package.xml
src/object_detection_2d-master/: README.md
src/pcl_people_detection/: CMakeLists.txt  package.xml
src/seher/: CMakeLists.txt  package.xml
src/seher/include/seher/move_robot/: move_robot.h
src/seher/include/seher/move_sim_robot/: move_sim_robot.h
src/seher/launch/: MSB_data_sending.launch  MSB_distance_calculation_receiver.launch  MSB_distance_calculation_sender.launch  home_cob_skeleton_tracker.launch  home_setup.launch  move_robot.launch  robot_self_filter.launch  rviz_config_body_tracking.rviz  rviz_config_home.rviz  rviz_config_workcell.rviz  self_see_links.yaml  workcell_setup.launch
src/seher/launch/includes/: nodelet2.launch.xml
src/seher/scripts/MSB_client/: MSB_client_main.py  application.properties
src/seher/src/MSB_receive_time/: MSB_receive_time.cpp
src/seher/src/MSB_send_receive/: MSB_send_receive.cpp
src/seher/src/MSB_send_time/: MSB_send_time.cpp
src/seher/src/clustering/: clustering.cpp
src/seher/src/collision_avoidance_robot/: collision_avoidance_robot.cpp
src/seher/src/collision_objects/: collision_objects.cpp
src/seher/src/distance_calculation/: distance_calculation.cpp
src/seher/src/distance_calculation_skeleton/: distance_calculation_skeleton.cpp
src/seher/src/handover_grasping_detector/: handover_grasping_detector.cpp
src/seher/src/handover_tool_in_hand_detector/: handover_tool_in_hand_detector.cpp
src/seher/src/move_robot/: move_robot.cpp
src/seher/src/move_sim_robot/: move_sim_robot.cpp
src/seher/src/move_sim_robot_skeleton/: move_sim_robot_skeleton.cpp
src/seher/src/point_publisher/: point_publisher.cpp
src/seher/src/pointcloud_computing/: pointcloud_computing.cpp
src/seher/src/pointcloud_computing_home/: pointcloud_home.cpp
src/seher/src/pointcloud_computing_workcell/: pointcloud_workcell.cpp
src/seher/src/pointcloud_statistical_outlier_removal_filter/: pointcloud_statistical_outlier_removal_filter.cpp
src/seher_msgs/: CMakeLists.txt  package.xml
src/vfk_msb_client-1.5.7/: .travis.yml  CMakeLists.txt  LICENSE  README.md  msb_test.launch  package.xml  setup.py
src/vfk_msb_client-1.5.7/scripts/: msb_ros_bridge.py  msb_ros_helper_test.py
src/vfk_msb_client-1.5.7/src/vfk_msb_py/: msb_ws4py_client.py
src/vfk_msb_client-1.5.7/src/vfk_msb_ros/: msb_ros_helper.py
(+40 files in other folders)
