<?xml version="1.0"?>
<package format="2">
  <name>seher</name>
  <version>0.0.0</version>
  <description>The seher package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mathieu@todo.todo">mathieu</maintainer>
<license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>


  <build_depend>eigen</build_depend>
<build_depend>moveit_core</build_depend>
    <build_depend>moveit_ros_planning_interface</build_depend>
    <build_depend>moveit_ros_perception</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>tf2_eigen</build_depend>
<build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>message_generation</build_depend>
<build_depend>pcl_ros</build_depend>
    <build_depend>pcl_conversions</build_depend>
<build_depend>pcl_msgs</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>ur_msgs</build_depend>
<build_depend>seher_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
<exec_depend>tf2_eigen</exec_depend>
<exec_depend>moveit_ros_planning_interface</exec_depend>
<exec_depend>moveit_core</exec_depend>
<exec_depend>pcl_ros</exec_depend>
    <exec_depend>pcl_conversions</exec_depend>
<exec_depend>sensor_msgs</exec_depend>
<exec_depend>pcl_msgs</exec_depend>
<exec_depend>ur_msgs</exec_depend>
  <export>
  </export>
</package>
